WF-799 Add an API connector to CMS plugin

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,16 @@
+# Web server settings
 SERVER_PORT=3000
-TMPL_ENGINE=mustache|nunjucks
+
+TEQ_CMS_LOCALE_ALLOWED=...
+TEQ_CMS_LOCALE_BASE_DISPLAY=...
+TEQ_CMS_LOCALE_BASE_TRANSLATE=...
+# Template engine used by TeqCMS (mustache or nunjucks)
+TEQ_CMS_TMPL_ENGINE=nunjucks
+
+
+# TeqCMS AI API settings (OpenAI-compatible)
+TEQ_CMS_AI_API_BASE_URL=https://api.openai.com/v1
+TEQ_CMS_AI_API_KEY=sk-...
+TEQ_CMS_AI_API_MODEL=gpt-4
+# Optional: used only for OpenAI
+TEQ_CMS_AI_API_ORG=
