--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@flancer32/teq-cms": "git+ssh://git@github.com:flancer32/teq-cms.git",
-    "nunjucks": "^3.2.4",
+    "openai": "^4.103.0",
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
