WF-801 Add objects to support the JSON DB

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "eslint-plugin-jsdoc": "^50.6.8",
     "mocha": "^11.3.0"
   },
+  "overrides": {
+    "whatwg-url": "13.0.0"
+  },
   "engines": {
     "node": ">=22"
   },
