--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /tmp/
 /var/*.pid
 /var/data.json
-/var/store/**
-/web/download/
+/var/store/
+/var/teq-cms/
 /web/css/tailwind.min.css
+/web/download/
