WF-806 Switch the demo CMS to the express server

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
 # Web server settings
 SERVER_PORT=3000
+SERVER_TYPE=[express|fastify|default]
 
 TEQ_CMS_LOCALE_ALLOWED=...
 TEQ_CMS_LOCALE_BASE_DISPLAY=...
 TEQ_CMS_LOCALE_BASE_TRANSLATE=...
 # Template engine used by TeqCMS (mustache or nunjucks)
 TEQ_CMS_TMPL_ENGINE=nunjucks
-
 
 # TeqCMS AI API settings (OpenAI-compatible)
 TEQ_CMS_AI_API_BASE_URL=https://api.openai.com/v1
