--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "dependencies": {
     "@flancer32/teq-cms": "git+ssh://git@github.com:flancer32/teq-cms.git",
-    "openai": "^4.103.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "fastify": "^4.25.1",
+    "openai": "^4.103.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
