WF-807 Make an initial web site for CMS demo

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "eslint": "./node_modules/.bin/eslint ./src/",
     "start": "node index.js",
-    "test:unit": "./node_modules/.bin/_mocha './test/unit/**/*.test.mjs' --recursive"
+    "test:unit": "./node_modules/.bin/_mocha './test/unit/**/*.test.mjs' --recursive",
+    "translate": "./node_modules/.bin/teq-cms translate"
   },
   "dependencies": {
     "@flancer32/teq-cms": "git+ssh://git@github.com:flancer32/teq-cms.git",
