--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   },
   "dependencies": {
     "@flancer32/teq-cms": "git+ssh://git@github.com:flancer32/teq-cms.git",
+    "@teqfw/di": ">=0.36.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "fastify": "^4.25.1",
+    "nunjucks": "^3.2.4",
     "openai": "^4.103.0"
   },
   "devDependencies": {
