--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "translate": "npx teq-cms translate"
   },
   "dependencies": {
-    "@flancer32/teq-cms": "^0.2.0",
-    "dotenv": "^16.5.0",
-    "nunjucks": "^3.2.4"
+    "@flancer32/teq-cms": "^0.3.0"
   },
   "overrides": {
     "whatwg-url": "13.0.0"
