WF-824 Add canonical and alternate link tags for localized pages to improve SEO

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,13 @@ TEQ_CMS_AI_API_BASE_URL=https://api.openai.com/v1
 TEQ_CMS_AI_API_KEY=sk-xxx
 TEQ_CMS_AI_API_MODEL=gpt-3.5-turbo
 TEQ_CMS_AI_API_ORG=org-xxx
+TEQ_CMS_BASE_URL=https://cms.teqfw.com
 TEQ_CMS_LOCALE_ALLOWED=en,es,ru
-TEQ_CMS_LOCALE_BASE_TRANSLATE=ru
 TEQ_CMS_LOCALE_BASE_DISPLAY=en
-TEQ_CMS_TMPL_ENGINE=nunjucks
+TEQ_CMS_LOCALE_BASE_TRANSLATE=ru
 TEQ_CMS_SERVER_PORT=3000
 TEQ_CMS_SERVER_TYPE=http
+TEQ_CMS_TLS_CA=/path/to/ca.pem
 TEQ_CMS_TLS_CERT=/path/to/cert.pem
 TEQ_CMS_TLS_KEY=/path/to/key.pem
-TEQ_CMS_TLS_CA=/path/to/ca.pem
+TEQ_CMS_TMPL_ENGINE=nunjucks
