--- a/.github/workflows/live.yaml
+++ b/.github/workflows/live.yaml
@@ -1,10 +1,10 @@
-name: LIVE - Redeploy the TeqCMS
+name: LIVE - Build & Deploy TeqCMS
 
 # Trigger action manually
 on: workflow_dispatch
 
 env:
-  APP_DIR: /home/${{vars.USER}}/inst/cms/  # Directory of the application
+  APP_DIR: /home/${{ vars.USER }}/inst/cms/  # Directory of the application
   PRJ: teq-cms  # The name of the project
   SERVICE: teq-cms.service  # The name of the service to manage
 
@@ -24,9 +24,32 @@ jobs:
       - name: Add application files to the archive.
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq --exclude=*.git* -r ${{env.PRJ}}.zip ./
+          args: zip -qq --exclude=*.git* -r ${{ env.PRJ }}.zip ./
 
       - name: Validate the existence of the archive.
+        run: |
+          pwd
+          ls -lh 
+
+      - name: Upload artifact to pass it to publish job.
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-archive
+          path: ${{ env.PRJ }}.zip
+          retention-days: 1
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download archive from build step.
+        uses: actions/download-artifact@v4
+        with:
+          name: app-archive
+          path: .
+
+      - name: Validate the downloaded archive.
         run: |
           pwd
           ls -lh 
@@ -34,9 +57,9 @@ jobs:
       - name: Validate SSH connection.
         uses: appleboy/ssh-action@master
         with:
-          host: ${{vars.HOST}}
-          username: ${{vars.USER}}
-          key: ${{secrets.SSH_KEY}}
+          host: ${{ vars.HOST }}
+          username: ${{ vars.USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             pwd
             whoami
@@ -44,23 +67,23 @@ jobs:
       - name: Copy files to Remote Server.
         uses: appleboy/scp-action@master
         with:
-          host: ${{vars.HOST}}
-          username: ${{vars.USER}}
-          key: ${{secrets.SSH_KEY}}
-          source: ${{env.PRJ}}.zip
-          target: ${{env.APP_DIR}}
+          host: ${{ vars.HOST }}
+          username: ${{ vars.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          source: ${{ env.PRJ }}.zip
+          target: ${{ env.APP_DIR }}
 
       - name: Extract files on Remote Server and switch site to the new instance.
         uses: appleboy/ssh-action@master
         with:
-          host: ${{vars.HOST}}
-          username: ${{vars.USER}}
-          key: ${{secrets.SSH_KEY}}
+          host: ${{ vars.HOST }}
+          username: ${{ vars.USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
-            cd "${{env.APP_DIR}}/"
+            cd "${{ env.APP_DIR }}/"
             rm -fr prod.old  
             mkdir prod.new
-            unzip ${{env.PRJ}}.zip -d ./prod.new/ &> /dev/null
+            unzip ${{ env.PRJ }}.zip -d ./prod.new/ &> /dev/null
 
             # Load nvm and set up node
             source ~/.nvm/nvm.sh
@@ -70,7 +93,7 @@ jobs:
             TIMESTAMP=$(date +%Y%m%d-%H%M%S)
 
             # Stop the service and run database export to separate backup file
-            sudo /bin/systemctl stop ${{env.SERVICE}}
+            sudo /bin/systemctl stop ${{ env.SERVICE }}
             
             # Switch the app version then reset the db structure (export / init / import)
             mv ./prod ./prod.old
@@ -78,9 +101,9 @@ jobs:
             cp ./prod.old/.env ./prod/.env
             
             # Start the service
-            sudo /bin/systemctl start ${{env.SERVICE}}
+            sudo /bin/systemctl start ${{ env.SERVICE }}
             
             # Rename the archive with a timestamp
-            mv ${{env.PRJ}}.zip ${{env.PRJ}}-${TIMESTAMP}.zip
-            echo "Archive renamed to: ${{env.PRJ}}-${TIMESTAMP}.zip"            
-            ls -lh ${{env.APP_DIR}}
+            mv ${{ env.PRJ }}.zip ${{ env.PRJ }}-${TIMESTAMP}.zip
+            echo "Archive renamed to: ${{ env.PRJ }}-${TIMESTAMP}.zip"            
+            ls -lh ${{ env.APP_DIR }}
